Setup for GCP build
Fixed build issues
Updated env files
Updated npm packages
Added yaml files
Removed yarn.lock
Lint changes
Simplified "export default"
Added OAuth2 endpoints
Updated Swagger
Renamed secrets hook
Updated Stripe version
Explicitly including React for JSX
