# src/api/routes/authenticateRouter.ts
@@ -7,8 +7,8 @@ export class AuthenticateRouter {
         let authenticate = Container.get(Authenticate);
         let router = Router();
 
-        router.post('/auth/login',  (req, res) => {  
-            /*  
+        router.post('/auth/login',  (req, res) => {
+            /*
                 #swagger.parameters['body'] = { in: 'body', description: 'text', required: true, schema: {
                     username: 'JohnDoe',
                     password: 'Pa55w0rd'
@@ -20,10 +20,11 @@ export class AuthenticateRouter {
 
         router.post('/auth/logout', (req, res) => authenticate.logout(req, res));
         router.post("/auth/register", (req, res) => authenticate.registerUser(req, res));
+        router.post("/auth/checkUsernameEmail", (req, res) => authenticate.checkUsernameEmail(req, res));
         router.get("/auth/validate", (req, res) => authenticate.validateUser(req, res));
         router.get("/auth/userid", (req, res) => authenticate.getUserId(req, res));
         router.get("/auth/passwordcomplexity", (req, res) => authenticate.getPasswordComplexity(req, res));
-        
+
         return router;
     }
 }
